# relativity-living-light

./:  darkmatter.md  .gitignore  00_COMO_LER.md  06_COMPARACOES_DETALHADAS.md  09_GLOSSARIO_COMPLETO-1.md  09_GLOSSARIO_COMPLETO.md  10_FAQ_COMPLETO.md  11_DOCUMENTO_PRIORIDADE.md  ARCHITECTURE.md  ARCHITECTURE_CLAIM_GATED.md  CAMINHOS_VALIDACAO_NOVOS.yml  CITATION.cff  COMPREHENSIVE_REPOSITORY_ANALYSIS.md  Codex2.md  Códex1.md  EXECUTIVE_SUMMARY.md  FALSIFIABILITY_PROTOCOL.md  GOVERNANCE_REORG_DRAFT.md  Geologia.md  Hz_superposicao.ipynb  IMPACT_REPORT_MULTI.md  LICENSE.md  MANIFESTO.md  MANIFESTO_MIGRATION_FILES.md  MAPA CIENTIESPIRITUAL.md  MAPA_RAFAELIA_TOTAL.md  Matemática.md  MathRaf.md  More.md  NEXT_RLL_VALIDATION_STEP.md  Numprimod.md  Provaw.md  RAFAEL_kernel.sh  README.md  README_MASTER.md  REFORM_LOG.md  REPRODUCIBILITY_MATRIX.md  RESUMO_REFORMA.md  RLL_FALSEABILITY_MATRIX.md  RLL_JSON_EVOLUTION_WATCHER.yml  (+37 more)
.github/: pull_request_template.md
ANALISE_COMPLETA/: 00_INDICE_MESTRE.md  01_14_Areas_Tematicas_Detalhadas.md  Bibliografia_Completa.md  Catalogo_Completo_Arquivos.md  Hierarquia_7_Niveis.md  Metricas_Conservadoras.md  README.md
Ciencia_aplicada/: Hz_superposicao (1).ipynb  density_decomp.ipynb  rotation_model.ipynb
Dados_artefatos/: Readme.md
Doc/: New theory and beyond.md
Last/: Readme.md
NumerosRafaelianos/: Constante.md  Readme.md  harmonica.md
PapersPub/: INDEX.md  README.md  Teoriatide.md  Teórico rafa22.md
RAFAELIA_COSMO_STRUCTURE_D/: README.md
RAF_VERBEYES/: PIPELINE.yml
app/src/main/cpp/: CMakeLists.txt  rll_jni.c
(+1555 files in other folders)
